--- a/cabal.project
+++ b/cabal.project
@@ -5,6 +5,7 @@ packages: language-ats
         , shake-ats
         , dependency
         , hs2ats
+        , fast-arithmetic
 
 constraints:
   ats-format +development,
@@ -14,15 +15,16 @@ constraints:
   shake-ats +development,
   ats-setup +development,
   dependency +development,
-  hs2ats +development +no-executable
+  hs2ats +development +no-executable,
+  fast-arithmetic +development
 
 allow-newer:
   megaparsec
 
 allow-boot-library-installs: True
 optimization: 2
-tests: True
-benchmarks: True
+-- tests: True
+-- benchmarks: True
 documentation: True
 
 program-options
