--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: ats-pkg
-version: 2.10.0.1
+version: 2.10.0.2
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -63,7 +63,7 @@ library
         Quaalude
     default-language: Haskell2010
     ghc-options: -Wall -Wincomplete-uni-patterns
-                 -Wincomplete-record-updates -Wcompat
+                 -Wincomplete-record-updates
     build-depends:
         base >=4.11 && <5,
         http-client -any,
@@ -107,7 +107,7 @@ executable atspkg
         Paths_ats_pkg
     default-language: Haskell2010
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
-                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
+                 -Wincomplete-uni-patterns -Wincomplete-record-updates
     
     if !flag(no-executable)
         build-depends:
