--- a/shake-ext/shake-ext.cabal
+++ b/shake-ext/shake-ext.cabal
@@ -40,15 +40,19 @@ library
     hs-source-dirs: src
     other-modules:
         Development.Shake.TH
+        Language.C.Includes
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
+        array -any,
         base >=4.11 && <5,
+        bytestring -any,
         Cabal >=2.2,
         composition-prelude -any,
         cpphs -any,
         directory -any,
         shake -any,
+        text -any,
         template-haskell -any
     
     if flag(development)
