--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -25,6 +25,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Language.C.Dependency
   build-depends:       base >= 4.7 && < 5
+                     , text
+                     , bytestring
   build-tools:         alex
   default-language:    Haskell2010
   if flag(development)
