--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -27,6 +27,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , text
                      , bytestring
+                     , array
   build-tools:         alex
   default-language:    Haskell2010
   if flag(development)
