--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -19,6 +19,12 @@ Flag development {
   default: False
 }
 
+Flag no-executable {
+  Description: Disable building the executable
+  manual: True
+  default: False
+}
+
 library
   hs-source-dirs:      src
   exposed-modules:     Language.C.Dependency
@@ -26,7 +32,27 @@ library
                      , text
                      , bytestring
                      , array
+                     , directory
+                     , filepath
   build-tools:         alex
+  default-language:    Haskell2010
+  if flag(development)
+    ghc-options:       -Werror
+  if impl(ghc >= 8.0)
+    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates
+  if impl(ghc >= 8.4)
+    ghc-options:       -Wmissing-export-lists
+  ghc-options:         -Wall
+
+executable cdeps
+  hs-source-dirs:      app
+  if flag(no-executable)
+    buildable: False
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , cdeps
+                     , optparse-applicative
   default-language:    Haskell2010
   if flag(development)
     ghc-options:       -Werror
