--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -1,83 +1,99 @@
-name:                cdeps
-version:             0.1.0.0
-synopsis:            Extract dependencies from C code.
-description:         This package provides the ability to extract dependencies from C code, for use with [shake](https://shakebuild.com) or otherwise.
-homepage:            https://github.com/vmchale/cdeps#readme
-license:             BSD3
-license-file:        LICENSE
-author:              Vanessa McHale
-maintainer:          vamchale@gmail.com
-copyright:           Copyright: (c) 2018 Vanessa McHale
-category:            Development, C, Language
-build-type:          Simple
-extra-doc-files:     README.md
-cabal-version:       1.18
-
-Flag development {
-  Description: Enable `-Werror`
-  manual: True
-  default: False
-}
-
-Flag no-executable {
-  Description: Disable building the executable
-  manual: True
-  default: False
-}
-
-library
-  hs-source-dirs:      src
-  exposed-modules:     Language.C.Dependency
-  build-depends:       base >= 4.8 && < 5
-                     , text
-                     , bytestring
-                     , array
-                     , directory
-                     , filepath
-  build-tools:         alex
-  default-language:    Haskell2010
-  if flag(development)
-    ghc-options:       -Werror
-  if impl(ghc >= 8.0)
-    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates
-  if impl(ghc >= 8.4)
-    ghc-options:       -Wmissing-export-lists
-  ghc-options:         -Wall
-
-executable cdeps
-  hs-source-dirs:      app
-  if flag(no-executable)
-    buildable: False
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , cdeps
-                     , optparse-applicative
-  default-language:    Haskell2010
-  if flag(development)
-    ghc-options:       -Werror
-  if impl(ghc >= 8.0)
-    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates
-  if impl(ghc >= 8.4)
-    ghc-options:       -Wmissing-export-lists
-  ghc-options:         -Wall
-
-test-suite cdeps-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , cdeps
-                     , hspec
-  if flag(development)
-    ghc-options:       -Werror
-  if impl(ghc >= 8.0)
-    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates
-  if impl(ghc >= 8.4)
-    ghc-options:       -Wmissing-export-lists
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
-  default-language:    Haskell2010
+cabal-version: 1.18
+name: cdeps
+version: 0.1.0.0
+license: BSD3
+license-file: LICENSE
+copyright: Copyright: (c) 2018 Vanessa McHale
+maintainer: vamchale@gmail.com
+author: Vanessa McHale
+homepage: https://github.com/vmchale/cdeps#readme
+synopsis: Extract dependencies from C code.
+description:
+    This package provides the ability to extract dependencies from C code, for use with [shake](https://shakebuild.com) or otherwise.
+category: Development, C, Language
+build-type: Simple
+extra-doc-files: README.md
 
 source-repository head
-  type:     git
-  location: https://github.com/vmchale/cdeps
+    type: git
+    location: https://github.com/vmchale/cdeps
+
+flag development
+    description:
+        Enable `-Werror`
+    default: False
+    manual: True
+
+flag no-executable
+    description:
+        Disable building the executable
+    default: False
+    manual: True
+
+library
+    exposed-modules:
+        Language.C.Dependency
+    build-tools: alex -any
+    hs-source-dirs: src
+    default-language: Haskell2010
+    ghc-options: -Wall
+    build-depends:
+        base >=4.8 && <5,
+        text -any,
+        bytestring -any,
+        array -any,
+        directory -any,
+        filepath -any
+    
+    if flag(development)
+        ghc-options: -Werror
+    
+    if impl(ghc >=8.0)
+        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
+    
+    if impl(ghc >=8.4)
+        ghc-options: -Wmissing-export-lists
+
+executable cdeps
+    main-is: Main.hs
+    hs-source-dirs: app
+    other-modules:
+        Paths_cdeps
+    default-language: Haskell2010
+    ghc-options: -Wall
+    build-depends:
+        base -any,
+        cdeps -any,
+        optparse-applicative -any
+    
+    if flag(no-executable)
+        buildable: False
+    
+    if flag(development)
+        ghc-options: -Werror
+    
+    if impl(ghc >=8.0)
+        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
+    
+    if impl(ghc >=8.4)
+        ghc-options: -Wmissing-export-lists
+
+test-suite cdeps-test
+    type: exitcode-stdio-1.0
+    main-is: Spec.hs
+    hs-source-dirs: test
+    default-language: Haskell2010
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+    build-depends:
+        base -any,
+        cdeps -any,
+        hspec -any
+    
+    if flag(development)
+        ghc-options: -Werror
+    
+    if impl(ghc >=8.0)
+        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
+    
+    if impl(ghc >=8.4)
+        ghc-options: -Wmissing-export-lists
