--- a/shake-ext/shake-ext.cabal
+++ b/shake-ext/shake-ext.cabal
@@ -43,9 +43,9 @@ library
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
-        array -any,
         base >=4.11 && <5,
         Cabal >=2.2,
+        cdeps,
         composition-prelude -any,
         cpphs -any,
         directory -any,
