--- a/stack.yaml
+++ b/stack.yaml
@@ -18,6 +18,7 @@ extra-deps:
   - hspec-dirstream-1.0.0.0
   - dirstream-1.0.3
   - htoml-megaparsec-1.1.0.3
+  - micro-recursion-schemes-5.0.2.1
 flags:
   hs2ats:
     no-executable: false
