--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: language-ats
-version: 1.2.0.6
+version: 1.2.0.7
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -47,7 +47,7 @@ library
         microlens-th -any,
         deepseq -any,
         ansi-wl-pprint >=0.6.8,
-        recursion-schemes >=5.0.1,
+        micro-recursion-schemes >=5.0.1,
         composition-prelude -any,
         containers -any,
         transformers -any
