--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -43,11 +43,10 @@ library
     build-depends:
         base >=4.10 && <5,
         array -any,
-        microlens -any,
-        microlens-th -any,
+        recursion-schemes >= 5.0.1,
+        lens,
         deepseq -any,
         ansi-wl-pprint >=0.6.8,
-        micro-recursion-schemes >=5.0.1,
         composition-prelude -any,
         containers -any,
         transformers -any
