--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -42,8 +42,7 @@ library
         shake-ext >=2.9.0.0,
         hs2ats >=0.2.0.1,
         directory -any,
-        microlens -any,
-        microlens-th -any,
+        lens -any,
         text -any,
         dependency -any,
         shake -any,
