--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,5 @@
 ---
-resolver: nightly-2018-04-18
+resolver: nightly-2018-04-24
 packages:
   - 'ats-pkg'
   - 'language-ats'
@@ -10,8 +10,8 @@ packages:
   - 'hs2ats'
   - 'cdeps'
 extra-deps:
-  - composition-prelude-1.3.0.8
-  - dhall-1.12.0
+  - composition-prelude-1.4.0.1
+  # - dhall-1.12.0
   - bzlib-0.5.0.5
   - casing-0.1.4.0
   - cli-setup-0.2.0.3
