--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: ats-pkg
-version: 2.10.0.12
+version: 2.10.0.13
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -118,7 +118,7 @@ executable atspkg
     other-modules:
         Paths_ats_pkg
     default-language: Haskell2010
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -with-rtsopts=-I0
                  -Wincomplete-uni-patterns -Wincomplete-record-updates
     
     if flag(eventlog)
@@ -138,6 +138,7 @@ executable atspkg
             directory -any,
             composition-prelude -any,
             text -any,
+            parallel-io -any,
             shake -any
     
     if flag(no-executable)
