--- a/cabal.project
+++ b/cabal.project
@@ -17,7 +17,8 @@ constraints:
   dependency +development,
   hs2ats +development +no-executable,
   cdeps +development +no-executable,
-  lens -test-doctests
+  lens -test-doctests,
+  comonad -test-doctests
 
 allow-boot-library-installs: True
 optimization: 2
