--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -26,6 +26,7 @@ flag development
 library
     exposed-modules:
         Data.Dependency
+    build-tools: cpphs -any
     hs-source-dirs: src
     other-modules:
         Data.Dependency.Type
@@ -34,7 +35,7 @@ library
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
-        base >=4.11 && <5,
+        base >=4.10 && <5,
         ansi-wl-pprint -any,
         containers -any,
         recursion-schemes -any,
@@ -44,7 +45,7 @@ library
         deepseq -any,
         tardis -any
     
-    if flag(development)
+    if (flag(development) && impl(ghc <8.4))
         ghc-options: -Werror
     
     if impl(ghc >=8.0)
