--- a/shake-ext/shake-ext.cabal
+++ b/shake-ext/shake-ext.cabal
@@ -42,10 +42,10 @@ library
         Development.Shake.TH
     default-language: Haskell2010
     other-extensions: GeneralizedNewtypeDeriving PatternSynonyms
-                      DerivingStrategies TypeFamilies DeriveAnyClass DeriveGeneric
+                      TypeFamilies DeriveAnyClass DeriveGeneric
     ghc-options: -Wall
     build-depends:
-        base >=4.11 && <5,
+        base >=4.9 && <5,
         Cabal >=2.2,
         cdeps -any,
         composition-prelude -any,
