--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: ats-pkg
-version: 2.10.0.17
+version: 2.10.0.18
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -30,9 +30,10 @@ custom-setup
                    cli-setup >=0.2.0.1
 
 flag profile
-  description: Enable profiling
-  default: False
-  manual: True
+    description:
+        Enable profiling
+    default: False
+    manual: True
 
 flag eventlog
     description:
@@ -109,7 +110,7 @@ library
         dependency -any,
         filemanip -any
     
-    if flag(development) && impl(ghc <8.4)
+    if (flag(development) && impl(ghc <8.4))
         ghc-options: -Werror
 
 executable atspkg
@@ -118,12 +119,13 @@ executable atspkg
     other-modules:
         Paths_ats_pkg
     default-language: Haskell2010
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -with-rtsopts=-I0
-                 -Wincomplete-uni-patterns -Wincomplete-record-updates
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+                 -with-rtsopts=-I0 -Wincomplete-uni-patterns
+                 -Wincomplete-record-updates
     
     if flag(eventlog)
         ghc-options: -eventlog -with-rtsopts=-l
-
+    
     if flag(profile)
         ghc-options: -with-rtsopts=-h
     
