--- a/cabal.project
+++ b/cabal.project
@@ -16,7 +16,9 @@ constraints:
   ats-setup +development,
   dependency +development,
   hs2ats +development +no-executable,
-  cdeps +development +no-executable
+  cdeps +development +no-executable,
+  lens -test-doctests,
+  comonad -test-doctests
 
 allow-boot-library-installs: True
 optimization: 2
