--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -34,6 +34,7 @@ library
     build-tools: alex -any
     hs-source-dirs: src
     default-language: Haskell2010
+    other-extensions: OverloadedStrings
     ghc-options: -Wall
     build-depends:
         base >=4.9 && <5,
