--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -33,6 +33,10 @@ library
         Data.Dependency.Error
         Data.Dependency.Sort
     default-language: Haskell2010
+    other-extensions: DeriveAnyClass DeriveGeneric OverloadedStrings
+                      DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable
+                      DerivingStrategies GeneralizedNewtypeDeriving OverloadedStrings
+                      PatternSynonyms TemplateHaskell TypeFamilies
     ghc-options: -Wall
     build-depends:
         base >=4.10 && <5,
@@ -57,6 +61,7 @@ test-suite dependency-test
     main-is: Spec.hs
     hs-source-dirs: test
     default-language: Haskell2010
+    other-extensions: TupleSections
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
     build-depends:
         base -any,
@@ -76,6 +81,7 @@ benchmark dependency-bench
     main-is: Bench.hs
     hs-source-dirs: bench
     default-language: Haskell2010
+    other-extensions: TupleSections
     ghc-options: -Wall
     build-depends:
         base -any,
