--- a/hs2ats/hs2ats.cabal
+++ b/hs2ats/hs2ats.cabal
@@ -37,6 +37,8 @@ library
     other-modules:
         Language.ATS.Generate.Error
     default-language: Haskell2010
+    other-extensions: DeriveAnyClass DeriveGeneric OverloadedStrings
+                      StandaloneDeriving PatternSynonyms
     ghc-options: -Wall
     build-depends:
         base >=4.7 && <5,
@@ -59,6 +61,8 @@ executable hs2ats
     main-is: Main.hs
     hs-source-dirs: app
     default-language: Haskell2010
+    other-extensions: DataKinds DeriveAnyClass DeriveGeneric
+                      OverloadedStrings TypeOperators
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
     build-depends:
         base -any,
