--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -34,6 +34,8 @@ library
         Development.Shake.ATS.Environment
         Development.Shake.ATS.Generate
     default-language: Haskell2010
+    other-extensions: RecordWildCards DeriveGeneric DeriveAnyClass
+                      TemplateHaskell
     ghc-options: -Wall
     build-depends:
         base >=4.9 && <5,
