--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: dependency
-version: 1.0.0.0
+version: 1.1.0.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -35,7 +35,7 @@ library
     default-language: Haskell2010
     other-extensions: DeriveAnyClass DeriveGeneric OverloadedStrings
                       DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable
-                      OverloadedStrings TemplateHaskell TypeFamilies
+                      OverloadedStrings TemplateHaskell TypeFamilies TupleSections
     ghc-options: -Wall
     build-depends:
         base >=4.8 && <5,
