--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,5 @@
 ---
-resolver: nightly-2018-05-03
+resolver: nightly-2018-05-13
 packages:
   - 'ats-pkg'
   - 'language-ats'
@@ -17,6 +17,7 @@ extra-deps:
   - hspec-dirstream-1.0.0.0
   - dirstream-1.0.3
   - htoml-megaparsec-1.1.0.4
+  - micro-recursion-schemes-5.0.2.2
 flags:
   hs2ats:
     no-executable: false
