--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -44,7 +44,8 @@ library
         shake-ext >=2.9.0.0,
         hs2ats >=0.2.0.1,
         directory -any,
-        lens -any,
+        microlens -any,
+        microlens-th,
         text -any,
         dependency -any,
         shake -any,
