--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: shake-ats
-version: 1.8.0.4
+version: 1.8.0.5
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -45,7 +45,7 @@ library
         hs2ats >=0.2.0.1,
         directory -any,
         microlens -any,
-        microlens-th,
+        microlens-th -any,
         text -any,
         dependency -any,
         shake -any,
