--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,13 @@ matrix:
       #    packages:
       #      - ghc-8.4.2
       #      - cabal-install-head
-      language: python
+      # language: python
+      language: c
 
     # OS X
     - env: TARGET=x86_64-apple-darwin
       os: osx
-      language: default
+      language: c
 
 before_install:
   - rm -rf ~/.cabal
