--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -41,11 +41,17 @@ library
         base >=4.8 && <5,
         ansi-wl-pprint -any,
         containers >=0.5.9,
-        micro-recursion-schemes -any,
         microlens -any,
         binary -any,
         deepseq -any
     
+    if impl(ghc >=8.2)
+        build-depends:
+            micro-recursion-schemes -any
+    else
+        build-depends:
+            recursion-schemes >=5.1
+
     if impl(ghc <8.0)
         build-depends:
             semigroups -any
