use cabal on mac

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,37 +42,23 @@ before_install:
       brew install lzlib
       brew install xz
       brew install bzip2
+      brew install CabalInstall
       # curl --insecure https://www.haskell.org/cabal/release/cabal-install-2.2.0.0/cabal-install-2.2.0.0-x86_64-apple-darwin-sierra.tar.gz -O cabal-install-2.2.0.0-x86_64-apple-darwin-sierra.tar.gz
       # curl --insecure https://downloads.haskell.org/~ghc/8.4.2/ghc-8.4.2-x86_64-apple-darwin.tar.xz -O ghc-8.4.2-x86_64-apple-darwin.tar.xz
-      curl --insecure -L https://www.stackage.org/stack/osx-x86_64 | tar xz --strip-components=1 --include '*/stack' -C ~/.local/bin
-      chmod a+x ~/.local/bin/stack
+      # curl --insecure -L https://www.stackage.org/stack/osx-x86_64 | tar xz --strip-components=1 --include '*/stack' -C ~/.local/bin
+      # chmod a+x ~/.local/bin/stack
     else
       export PATH=/opt/ghc/bin:$PATH
       cabal update
     fi
 
 install:
-  - |
-    if [ `uname` = "Darwin" ]
-    then
-      stack install happy
-      stack --no-terminal --install-ghc build --only-dependencies
-    else
-      cabal new-build all --dependencies-only
-    fi
+  - cabal new-build all --dependencies-only
 
 script:
   - curl -sL https://raw.github.com/ndmitchell/hlint/master/misc/travis.sh | sh -s .
-  - |
-    if [ `uname` = "Darwin" ]
-    then
-      stack --no-terminal build --haddock --no-haddock-deps --test --bench --no-run-tests --no-run-benchmarks
-      curl -sL https://raw.github.com/ndmitchell/weeder/master/misc/travis.sh | sh -s .
-      export BINPATH="$(find .stack-work/ -name atspkg -perm 755)"
-    else
-      cabal new-build all
-      export BINPATH="$(find -name atspkg -executable | tail -n1)"
-    fi
+  - cabal new-build all
+  - export BINPATH="$(find -name atspkg -executable | tail -n1)"
   - echo $BINPATH
   - |
     if [ `uname` = "Darwin" ]
