--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,9 @@
 build: off
 
 before_test:
+  - choco install ghc
+  - choco install cabal
   - set PATH=C:\Program Files\Git\mingw64\bin;%PATH%
-  - curl -sS -ostack.zip -L --insecure http://www.stackage.org/stack/windows-i386
-  - 7z x stack.zip stack.exe
 
 clone_folder: "c:\\stack"
 environment:
@@ -13,10 +13,8 @@ environment:
     STACK_ROOT: "c:\\sr"
 
 test_script:
-  - stack setup > nul
   - set path=%PATH%;C:\Users\appveyor\AppData\Roaming\local\bin
-  - echo "" | stack --no-terminal install happy
-  - echo "" | stack --no-terminal install
+  - cabal new-build
   - type C:\stack\.stack-work\logs\alex-3.2.4.log
   - ps: Get-ChildItem . -name -recurse madlang.exe
   - ps: Copy-Item c:\\stack\\.stack-work\\install\\81831b05\\bin\\atspkg.exe atspkg-x86_64-pc-windows.exe
