--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
     STACK_ROOT: "c:\\sr"
 
 test_script:
-  - set path=%PATH%;C:\Users\appveyor\AppData\Roaming\local\bin
+  - refreshenv
   - cabal new-build all
   - type C:\stack\.stack-work\logs\alex-3.2.4.log
   - ps: Get-ChildItem . -name -recurse madlang.exe
