--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -82,6 +82,7 @@ library
                       DerivingStrategies
     ghc-options: -Wall -Wincomplete-uni-patterns
                  -Wincomplete-record-updates
+    build-tools: cpphs
     build-depends:
         base >=4.9 && <5,
         http-client -any,
