--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -102,7 +102,7 @@ library
         containers -any,
         parallel-io -any,
         mtl -any,
-        dhall >=1.14.0,
+        dhall >=1.12.0 && < 1.13.0,
         ansi-wl-pprint -any,
         shake-ats >=1.8.0.0,
         shake-ext >=2.6.0.0,
