--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -17,6 +17,7 @@ extra-source-files:
     man/atspkg.1
     dhall/config.dhall
     dhall/atslib.dhall
+    dhall/atspkg-prelude.dhall
 extra-doc-files: README.md
                  docs/manual.tex
 
@@ -56,6 +57,7 @@ library
     exposed-modules:
         Language.ATS.Package
         Distribution.ATS
+    build-tools: cpphs -any
     hs-source-dirs: src
     other-modules:
         Paths_ats_pkg
@@ -82,7 +84,6 @@ library
                       DerivingStrategies
     ghc-options: -Wall -Wincomplete-uni-patterns
                  -Wincomplete-record-updates
-    build-tools: cpphs
     build-depends:
         base >=4.9 && <5,
         http-client -any,
@@ -102,7 +103,7 @@ library
         containers -any,
         parallel-io -any,
         mtl -any,
-        dhall >=1.12.0 && < 1.13.0,
+        dhall >=1.12.0 && <1.13.0,
         ansi-wl-pprint -any,
         shake-ats >=1.8.0.0,
         shake-ext >=2.6.0.0,
