--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -68,7 +68,7 @@ executable cdeps
     if flag(no-executable)
         buildable: False
     
-    if flag(development)
+    if (flag(development) && impl(ghc <8.4))
         ghc-options: -Werror
     
     if impl(ghc >=8.0)
