travis being stupid again

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ script:
       export BINPATH="$(find dist-newstyle/ -name atsfmt -perm 755 | tail -n1)"
     else
       find dist-newstyle/ -name atsfmt -executable
-      export BINPATH="$(find dist-newstyle/ -name atsfmt -executable | tail -n1)"
+      export BINPATH="$(find dist-newstyle/ -name atsfmt -executable | tail -n1)/atsfmt"
     fi
   - echo $BINPATH
   - mv $BINPATH atsfmt-$TARGET
